src/homepage/navbar.css
@import url('https://fonts.googleapis.com/css2?family=Balsamiq+Sans&display=swap');

:root {
    --overlay-color: rgba(13, 13, 14, 0.85);
    --menu-speed: 0.75s;
  }

.navbar {
    background-color: #fff;
    box-shadow: 0 2px 8px 0 rgba(0,0,0,.25);
    font-family: 'Balsamiq Sans', sans-serif;
    text-transform: uppercase;
    font-size: .875rem;
}

.navbar-wrapper {
    height: 100px;
    display: flex;
    margin: 0 auto;
    width: 80%;
    justify-content: space-between;
    align-items: center;
}

.logo {
    width: 14%;
    margin: 0 0 0 6%;
}

.menu-wrap {
    width: 57%;
}

.menu-wrap .toggler {
    display: none;
}

.menu-wrap .hamburger {
    display: none;
}

.menu > div > div > ul {
    display: flex;
    justify-content: space-between;
    padding: 0;
}

.menu > div > div > ul > li {
    list-style: none;
}

.nav-link {
    text-decoration: none;
    color: #000;
}

.order-button {
    width: 13%;
    margin: 0 7% 0 0;
}

button {
    background-color:  #e31b23;
    color: #fff;
    height: 3rem;
    border-radius: 1.5rem;
    padding: 0 1.2rem 0 1.2rem;
    text-decoration: none;
    font-family: inherit;
    text-transform: inherit;
    border: none;
    outline: none;
}

@media only screen and (max-width: 1400px) {
    .navbar-wrapper {
        height: 77px;
        display: flex;
        margin: 0 auto;
        width: 100%;
        justify-content: space-between;
    }
    
    .logo {
        width: 14%;
        margin: 0 0 0 2%;
    }
    
    img {
        width: 6rem;
    }

    .menu-wrap {
        width: 62%;
    }

    .order-button {
        width: 15%;
        margin: 0 2% 0 0;
    }

    button {
        border-radius: 1.5rem;
        padding: 0 0.875rem 0 1.25rem;
    }
  }

  @media only screen and (max-width: 1023px) {
    .navbar {
        font-size: .8rem;
    }

    .navbar-wrapper {
        height: 77px;
        display: flex;
        margin: 0 auto;
        width: 100%;
        justify-content: space-between;
    }

    .logo {
        width: 13%;
        margin: 0 0 0 2%;
    }

    img {
        width: 4.5rem;
    }
    
    .menu-wrap {
        width: 65%;
        margin: 6px;
    }

    .menu > div > div > ul {
        display: flex;
        justify-content: space-evenly;
        padding: 0;
    }

    .order-button {
        width: 15.2%;
        margin: 0 2% 0 0;
    }

    button {
        border-radius: 1.5rem;
        padding: 0 .5rem 0 .5rem;
        font-size: .8rem;
        height: 2.6rem;
    }

    .menu > div > div > ul > li {
        width: min-content;
    }

    .nav-link {
        line-height: 1rem;
    }
  }

  @media only screen and (max-width: 767px) {
    .navbar-wrapper {
        height: 63px;
    }

    .menu-wrap {
        width: 3rem;
        height: 3rem;
        margin: 0 4% 0 0;
        z-index: 1;
    }

    .logo {
        margin: 0 0 0 5%;
    }

    img {
        width: 4.3rem;
    }

    .menu-wrap .toggler {
        display: block;
        background: grey;
        z-index: 2;
        opacity: 0;
        width: 3rem;
        height: 3rem;
        margin: 0;
    }

    .menu-wrap .hamburger {
        position: relative;
        width: 2rem;
        height: 2rem;
        padding: .52rem;
        display: flex;
        top: -3rem;
        align-items: center;
        justify-content: center;
        z-index: -1;
    }

    .menu-wrap .hamburger > div {
        position: relative;
        z-index: 1;
        width: 1.5rem;
        height: 3px;
        background-color: #e31b23;
        border-radius: 10.5rem;
        display: flex;
        align-items: center;
        justify-content: center;
        transition: all 0.4s ease;
    }

    .menu-wrap .hamburger > div:before,
    .menu-wrap .hamburger > div:after {
        content: '';
        position: absolute;
        top: -7px;
        right: 0;
        width: 71%;
        height: 3px;
        background: inherit;
        border-radius: inherit;
        z-index: 1;
    }

    .menu-wrap .hamburger > div:after {
        top: 7px;
        width: 54%;
    }

    .menu-wrap .toggler:checked + .hamburger > div {
        transform: rotate(135deg);
        background-color: #fff;
    }

    .menu-wrap .toggler:checked + .hamburger > div:before,
    .menu-wrap .toggler:checked + .hamburger > div:after {
          top: 0;
          transform: rotate(90deg);
          width: 100%;
    }

    .menu-wrap .toggler:checked:hover + .hamburger > div {
        transform: rotate(225deg);
    }

    .menu-wrap .toggler:checked ~ .menu {
          visibility: visible;
    }

    .menu-wrap .toggler:checked ~ .menu > div {
        transform: scale(1);
        transition-duration: var(--menu-speed);
    }

    .menu-wrap .toggler:checked ~ .menu > div > div {
        opacity: 1;
        transition: opacity 0.4s ease;
    }

    .menu-wrap .menu {
        position: fixed;
        width: 100%;
        height: 100%;
        top: 0;
        left: 0;
        z-index: -3;
        visibility: hidden;
        overflow: hidden;
        display: flex;
        align-items: center;
        justify-content: center; 
    }

    .menu-wrap .menu > div {
        background: var(--overlay-color);
        border-radius: 50%;
        width: 200vh;
        height: 200vh;
        display: flex;
        flex: none;
        align-items: center;
        justify-content: center;
        transform: scale(0);
        transition: all 0.4s ease;
    }

    .menu-wrap .menu > div > div {
        text-align: center;
        max-width: 90vw;
        max-height: 100vh;
        opacity: 0;
        transition: opacity 0.4s ease;
    }

    .menu-wrap .menu > div > div > ul {
        flex-direction: column;
    }

    .menu-wrap .menu > div > div > ul > li {
        width: max-content;
        list-style: none;
        color: #fff;
        font-size: 1.3rem;
        margin: auto;
        padding: 1rem;
    }

    .menu-wrap .menu > div > div > ul > li > .nav-link {
        color: inherit;
        text-decoration: none;
        transition: color 0.4s ease;
    }

    .order-button {
        display: none;
    }
  }

